linuxmuster-linbo (2.3.18-0) babo62; urgency=low

  * lmn7:
    - added isinteger() to helperfunctions.sh.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 04 Feb 2017 19:13:12 +0000

linuxmuster-linbo (2.3.17-0) babo62; urgency=low

  * lmn7:
    - update-linbofs.sh: removed setting of linbo account password.
    - updated grub.cfg template for forced netboot.
    - moved linbo setup script to linuxmuster-base7 package.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 04 Feb 2017 12:54:43 +0000

linuxmuster-linbo (2.3.16-0) babo62; urgency=low

  * linbo_cmd, set_efibootorder: improved recognition of efi network devices.
  * added grub-pc-bin and libcgmanager0 to build-deps.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 07 Dec 2016 21:22:48 +0100

linuxmuster-linbo (2.3.15-0) babo62; urgency=low

  * update-linbofs.sh:
    - avoid multiple invokation of sophomorix-passwd.
    - add root's rsa keys.
  * added new ci graphics.
  * added udev qemu rules for mmcblk devices to linbofs.
  * linbo_cmd:
    - syncl(): disk fix (affects only mmcblk0 devices).
    - get_partition_size(): fixed size for devices which are symlinks.
    - get_partition_size(): handle wrong invokation by linbo_gui for mmcblk0 devices.
  * Kernel: add surface 3 touchscreen driver.
  * Fix #657 - update-linbofs copies id_dsa.pub only.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 07 Dec 2016 21:22:48 +0100

linuxmuster-linbo (2.3.14-0) babo62; urgency=low

  * kernel updated to 4.8.10:
    - added surface 3 support for 64bit kernel.
    - removed experimental sata drivers.
    - removed btrfs driver.
  * cloop 4.8 update, fetched from http://debian-knoppix.alioth.debian.org/packages/linux-source-4.7.3/ and modified for kernel 4.8.10 (see https://lists.debian.org/debian-knoppix/2016/10/msg00001.html).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 21 Nov 2016 15:32:36 +0100

linuxmuster-linbo (2.3.13-0) babo62; urgency=low

  * control file improvements.