@@ -1,1 +1,1 @@
-LINBO 2.3.18-0
+LINBO 2.3.19-0
